Fix editor toggle hidden by be38ac1e3cf731d5e623078ebeee01ace8ab0840

--- a/client/app/styles/main.styl
+++ b/client/app/styles/main.styl
@@ -219,7 +219,10 @@ body.theme {
   padding: 10px;
   margin: 0;
   position: absolute;
-  overflow: auto;
+
+  > div {
+    overflow: auto;
+  }
 
   .editor-toggle {
     position: absolute;
