--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6935,6 +6935,8 @@ body.theme #main {
   padding: 10px;
   margin: 0;
   position: absolute;
+}
+.editor-sidebar > div {
   overflow: auto;
 }
 .editor-sidebar .editor-toggle {
